{
  "version": 4,
  "terraform_version": "0.12.24",
  "serial": 16,
  "lineage": "b28642be-4f11-5b0d-c7b6-06ccc2ae0d7e",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "main-gw",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "igw-0f29164608c911fe7",
            "owner_id": "391761776243",
            "tags": {
              "Name": "main"
            },
            "vpc_id": "vpc-082aa3f7faa56b91e"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "main-public",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-03b21842dd901cec2",
            "owner_id": "391761776243",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0f29164608c911fe7",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "main-public-1"
            },
            "vpc_id": "vpc-082aa3f7faa56b91e"
          },
          "dependencies": [
            "aws_internet_gateway.main-gw",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "main-public-1-a",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0b25227b7a584db09",
            "route_table_id": "rtb-03b21842dd901cec2",
            "subnet_id": "subnet-0ed927b4b416ff86e"
          },
          "dependencies": [
            "aws_internet_gateway.main-gw",
            "aws_route_table.main-public",
            "aws_subnet.main-public-1",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "main-public-2-a",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-08703658b7f6d3468",
            "route_table_id": "rtb-03b21842dd901cec2",
            "subnet_id": "subnet-00363d7aaa81263ae"
          },
          "dependencies": [
            "aws_internet_gateway.main-gw",
            "aws_route_table.main-public",
            "aws_subnet.main-public-2",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "main-public-3-a",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-08f506692a2652768",
            "route_table_id": "rtb-03b21842dd901cec2",
            "subnet_id": "subnet-02b544d979c3da0f4"
          },
          "dependencies": [
            "aws_internet_gateway.main-gw",
            "aws_route_table.main-public",
            "aws_subnet.main-public-3",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "example-instance",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:391761776243:security-group/sg-0743e04cdff7f0aa8",
            "description": "security group that allows ssh and all egress traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0743e04cdff7f0aa8",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "allow-ssh",
            "name_prefix": null,
            "owner_id": "391761776243",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "example-instance"
            },
            "timeouts": null,
            "vpc_id": "vpc-082aa3f7faa56b91e"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "main-private-1",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:391761776243:subnet/subnet-01bc0d966ae39a808",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1a",
            "availability_zone_id": "euw1-az1",
            "cidr_block": "10.0.4.0/24",
            "id": "subnet-01bc0d966ae39a808",
            "map_public_ip_on_launch": false,
            "owner_id": "391761776243",
            "tags": {
              "Name": "main-private-1"
            },
            "vpc_id": "vpc-082aa3f7faa56b91e"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "main-private-2",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:391761776243:subnet/subnet-086a0fb4b2129b4ec",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1b",
            "availability_zone_id": "euw1-az2",
            "cidr_block": "10.0.5.0/24",
            "id": "subnet-086a0fb4b2129b4ec",
            "map_public_ip_on_launch": false,
            "owner_id": "391761776243",
            "tags": {
              "Name": "main-private-2"
            },
            "vpc_id": "vpc-082aa3f7faa56b91e"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "main-private-3",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:391761776243:subnet/subnet-006ecc79fc41e6c9d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1c",
            "availability_zone_id": "euw1-az3",
            "cidr_block": "10.0.6.0/24",
            "id": "subnet-006ecc79fc41e6c9d",
            "map_public_ip_on_launch": false,
            "owner_id": "391761776243",
            "tags": {
              "Name": "main-private-3"
            },
            "vpc_id": "vpc-082aa3f7faa56b91e"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "main-public-1",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:391761776243:subnet/subnet-0ed927b4b416ff86e",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1a",
            "availability_zone_id": "euw1-az1",
            "cidr_block": "10.0.1.0/24",
            "id": "subnet-0ed927b4b416ff86e",
            "map_public_ip_on_launch": true,
            "owner_id": "391761776243",
            "tags": {
              "Name": "main-public-1"
            },
            "vpc_id": "vpc-082aa3f7faa56b91e"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "main-public-2",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:391761776243:subnet/subnet-00363d7aaa81263ae",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1b",
            "availability_zone_id": "euw1-az2",
            "cidr_block": "10.0.2.0/24",
            "id": "subnet-00363d7aaa81263ae",
            "map_public_ip_on_launch": true,
            "owner_id": "391761776243",
            "tags": {
              "Name": "main-public-2"
            },
            "vpc_id": "vpc-082aa3f7faa56b91e"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "main-public-3",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:391761776243:subnet/subnet-02b544d979c3da0f4",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1c",
            "availability_zone_id": "euw1-az3",
            "cidr_block": "10.0.3.0/24",
            "id": "subnet-02b544d979c3da0f4",
            "map_public_ip_on_launch": true,
            "owner_id": "391761776243",
            "tags": {
              "Name": "main-public-3"
            },
            "vpc_id": "vpc-082aa3f7faa56b91e"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:391761776243:vpc/vpc-082aa3f7faa56b91e",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-057db8f9b0b257002",
            "default_route_table_id": "rtb-099a306ae63b7bc05",
            "default_security_group_id": "sg-0329420fea67b9d78",
            "dhcp_options_id": "dopt-495b0f2f",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-082aa3f7faa56b91e",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-099a306ae63b7bc05",
            "owner_id": "391761776243",
            "tags": {
              "Name": "main"
            }
          }
        }
      ]
    }
  ]
}